Add multiple updates and fixes

--- a/map-backup-old.html
+++ b/map-backup-old.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://schoolprayer.bridgebuilders.net/map.html"
+      content="https://schoolprayer.bridgebuilders.net/map-v2.html"
     />
     <meta
       property="og:title"
@@ -30,7 +30,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://schoolprayer.bridgebuilders.net/map.html"
+      content="https://schoolprayer.bridgebuilders.net/map-v2.html"
     />
     <meta
       property="twitter:title"
@@ -1144,7 +1144,7 @@
         <span class="days-text">21 Days of Prayer</span>
         <span class="prayer-text">For Our Nation's Schools</span>
       </h1>
-      <p>August 1-21, 2025</p>
+      <p>2025-2026 School Year</p>
     </div>
 
     <div id="map"></div>
@@ -1319,7 +1319,7 @@
     </div>
 
     <div class="button-bar">
-      <a href="index.html">← BACK TO REGISTRATION</a>
+      <a href="index-v2.html">← BACK TO REGISTRATION</a>
       <button onclick="openSchoolsModal()">VIEW ADOPTED SCHOOLS</button>
       <button onclick="openShareModal()">SHARE WITH A FRIEND</button>
     </div>
@@ -2150,7 +2150,7 @@
           "Join the 21 Days of Prayer for Our Nation's Schools",
         );
         const body = encodeURIComponent(
-          `I wanted to invite you to join the 21 Days of Prayer for Our Nation's Schools (August 1-21, 2025).\n\n` +
+          `I wanted to invite you to join the 21 Days of Prayer for Our Nation's Schools.\n\n` +
             `Together, we're praying for schools across the nation. You can see the prayer map and adopt a school here:\n\n` +
             `${window.location.href}\n\n` +
             `Let's make a difference through prayer!\n\n` +
@@ -2260,7 +2260,7 @@
         const body = encodeURIComponent(
           `Hi ${friendName},\n\n` +
             (personalMessage ? `${personalMessage}\n\n` : "") +
-            `I wanted to invite you to join the 21 Days of Prayer for Our Nation's Schools (August 1-21, 2025). ` +
+            `I wanted to invite you to join the 21 Days of Prayer for Our Nation's Schools. ` +
             `Together, we're praying for schools across the nation.\n\n` +
             `You can see the prayer map and adopt a school here: ${window.location.href}\n\n` +
             `Let's make a difference through prayer!\n\n` +
