Add multiple updates and fixes

--- a/landing.html
+++ b/landing.html
@@ -701,7 +701,7 @@
       <nav class="nav-menu">
         <ul>
           <li><a href="homepage.html">Home</a></li>
-          <li><a href="index.html">Register & Adopt</a></li>
+          <li><a href="registration.html">Register & Adopt</a></li>
           <li><a href="map.html">Prayer Map</a></li>
           <li><a href="prayer-walking-tips.html">Prayer Walking Tips</a></li>
           <li><a href="canopy-of-protection.html">Canopy of Protection</a></li>
@@ -841,7 +841,9 @@
             Commit to pray for a specific school for 21 days. Join thousands
             across the nation in covering our schools with prayer.
           </p>
-          <a href="index.html" class="btn btn-primary">Adopt a School Now</a>
+          <a href="registration.html" class="btn btn-primary"
+            >Adopt a School Now</a
+          >
         </div>
 
         <div class="action-card">
@@ -944,7 +946,7 @@
           Together, we can see every school in America covered in prayer. Will
           you join us?
         </p>
-        <a href="index.html" class="btn">Start Praying Today</a>
+        <a href="registration.html" class="btn">Start Praying Today</a>
       </section>
     </div>
 
