--- a/prayer-map-exporter.html
+++ b/prayer-map-exporter.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>21 Days of Prayer 2025 - Map Export</title>
+    <title>21 Days of Prayer 2025 - 4K Map Export</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
     <style>
@@ -187,7 +187,7 @@
 
       <div class="button-container" style="display: none">
         <button class="action-btn" onclick="exportMap()">
-          Export High Resolution Image
+          Export 4K Image
         </button>
         <button class="action-btn" onclick="reloadData()">Refresh Data</button>
       </div>
@@ -454,16 +454,70 @@
           ctx.lineWidth = 4;
           ctx.strokeRect(2, 2, width - 4, height - 4);
 
-          // Add timestamp
+          // Add branding and footer information
           const now = new Date();
-          ctx.fillStyle = "rgba(255,255,255,0.5)";
-          ctx.font = "14px sans-serif";
-          ctx.textAlign = "right";
+          const dateStr = now.toLocaleDateString("en-US", {
+            month: "long",
+            day: "numeric",
+            year: "numeric",
+          });
+
+          // Add semi-transparent background for footer
+          ctx.fillStyle = "rgba(10, 14, 39, 0.8)";
+          ctx.fillRect(0, height - 120, width, 120);
+
+          // Add BridgeBuilders branding
+          ctx.textAlign = "center";
+          ctx.fillStyle = "white";
+
+          // BridgeBuilders logo text - centered
+          ctx.font =
+            'bold 36px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif';
+          const bridgeText = "BRIDGE";
+          const bridgeWidth = ctx.measureText(bridgeText).width;
+
+          ctx.font =
+            '300 36px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif';
+          const buildersText = "BUILDERS";
+          const buildersWidth = ctx.measureText(buildersText).width;
+
+          const totalWidth = bridgeWidth + buildersWidth;
+          const startX = (width - totalWidth) / 2;
+
+          // Draw BRIDGE in bold
+          ctx.font =
+            '900 36px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif';
+          ctx.fillText(bridgeText, startX + bridgeWidth / 2, height - 70);
+
+          // Draw BUILDERS in light
+          ctx.font =
+            '300 36px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif';
+          ctx.fillStyle = "rgba(255, 255, 255, 0.9)";
           ctx.fillText(
-            `Generated: ${now.toLocaleString()}`,
-            width - 20,
-            height - 20,
+            buildersText,
+            startX + bridgeWidth + buildersWidth / 2,
+            height - 70,
           );
+
+          // Add "Int'l Leadership Network"
+          ctx.font =
+            '20px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif';
+          ctx.fillStyle = "rgba(255, 255, 255, 0.8)";
+          ctx.textAlign = "center";
+          ctx.fillText("Int'l Leadership Network", width / 2, height - 40);
+
+          // Add website URL
+          ctx.font =
+            'italic 18px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif';
+          ctx.fillStyle = "rgba(255, 215, 0, 0.9)"; // Golden color for URL
+          ctx.fillText("prayerforschools.com", width / 2, height - 15);
+
+          // Add generated date in the top right corner
+          ctx.textAlign = "right";
+          ctx.font =
+            '16px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif';
+          ctx.fillStyle = "rgba(255, 255, 255, 0.7)";
+          ctx.fillText(`Generated: ${dateStr}`, width - 40, 80);
 
           console.log("Map rendered successfully!");
         } catch (error) {
