Mapping utility relayout and fixes

--- a/media.html
+++ b/media.html
@@ -452,8 +452,8 @@
           <div class="stat-label">States Participating</div>
         </div>
         <div class="stat-card">
-          <div class="stat-number">Aug 1-21</div>
-          <div class="stat-label">2025 Prayer Dates</div>
+          <div class="stat-number">Aug - May</div>
+          <div class="stat-label">Academic Year Focus</div>
         </div>
       </div>
 
@@ -464,7 +464,14 @@
           <p>
             The 21 Days of Prayer for Our Nation's Schools is a nationwide
             initiative mobilizing communities to pray for students, teachers,
-            and administrators during the critical back-to-school season.
+            and administrators throughout the academic year, with special focus
+            on recruiting prayer warriors each August.
+          </p>
+          <p>
+            Parents and believers today are deeply concerned about what we see
+            happening in schools around our nation. But we can be confident the
+            Lord has a great plan for this generation! We can help reclaim it
+            through prayer!
           </p>
           <p>
             Since its inception, this movement has united thousands of prayer
@@ -476,21 +483,32 @@
         <div class="info-card">
           <h3>Key Information</h3>
           <ul>
-            <li>Annual prayer focus: August 1-21</li>
-            <li>Open to all denominations and communities</li>
+            <li>Academic year prayer focus: August through May</li>
+            <li>Special recruiting emphasis each August</li>
+            <li>Based on the book "Reclaim a Generation"</li>
             <li>Each participant "adopts" specific schools</li>
-            <li>Resources provided for effective prayer</li>
+            <li>21-day prayer guide with targeted Scriptures</li>
+            <li>Resources for churches and prayer groups</li>
             <li>Real-time tracking of prayer coverage</li>
           </ul>
         </div>
 
         <div class="info-card">
           <h3>Media Contact</h3>
-          <p><strong>BridgeBuilders Int'l Leadership Network</strong></p>
-          <p>P.O. Box 31415<br />Phoenix, AZ 85046 USA</p>
           <p>
+            <strong>Cheryl Sacks</strong><br />
+            Author & Prayer Mobilizer
+          </p>
+          <p><strong>BridgeBuilders Int'l Leadership Network</strong></p>
+          <p>
+            Phone: <strong>+1 (602) 977-1111</strong><br />
             Email:
-            <a href="mailto:info@bridgebuilders.net">info@bridgebuilders.net</a>
+            <a href="mailto:cheryl.sacks@bridgebuilders.net"
+              >cheryl.sacks@bridgebuilders.net</a
+            >
+          </p>
+          <p style="margin-top: 1rem">
+            P.O. Box 31415<br />Phoenix, AZ 85046 USA
           </p>
           <p>
             Website:
@@ -498,6 +516,135 @@
               >prayerforschools.com</a
             >
           </p>
+        </div>
+      </div>
+
+      <!-- Reclaim a Generation Book Section -->
+      <div
+        class="map-section"
+        style="
+          background: linear-gradient(135deg, #113a51 0%, #1e5173 100%);
+          color: white;
+        "
+      >
+        <div
+          class="section-header"
+          style="border-bottom: 2px solid rgba(255, 255, 255, 0.2)"
+        >
+          <h2 class="section-title" style="color: white">
+            Reclaim a Generation
+          </h2>
+          <p
+            class="section-description"
+            style="color: rgba(255, 255, 255, 0.9)"
+          >
+            The foundational resource for the 21 Days of Prayer movement
+          </p>
+        </div>
+
+        <div
+          style="
+            display: grid;
+            grid-template-columns: 1fr 2fr;
+            gap: 2rem;
+            align-items: start;
+          "
+        >
+          <div>
+            <div
+              style="
+                background: white;
+                padding: 1rem;
+                border-radius: 8px;
+                text-align: center;
+              "
+            >
+              <h3 style="color: #113a51; margin-bottom: 1rem">Prayer Guide</h3>
+              <div
+                style="background: #f0f0f0; padding: 2rem; border-radius: 4px"
+              >
+                <p style="color: #666; font-size: 3rem; margin: 0">📘</p>
+                <p style="color: #113a51; font-weight: bold; margin-top: 1rem">
+                  Volume 2
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <p
+              style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem"
+            >
+              <strong
+                >Parents and believers today are deeply concerned about what we
+                see happening in schools around our nation. Clearly Satan has
+                declared war on children and youth, and schools are a prime
+                target of his. But the truth is that no matter what we see with
+                our natural eyes, we can be confident the Lord has a great plan
+                for this generation! We can help reclaim it through
+                prayer!</strong
+              >
+            </p>
+
+            <p style="line-height: 1.8; margin-bottom: 1.5rem">
+              <em><strong>Reclaim a Generation (Volume 2)</strong></em> is a
+              21-day prayer guide, loaded with relevant information about the
+              issues schools and kids face today. It includes targeted prayer
+              points and Scriptures to pray through each day. While it can be
+              used any time throughout the year, it is especially effective to
+              use when kids are going back to school after summer break.
+            </p>
+
+            <p style="line-height: 1.8; margin-bottom: 1.5rem">
+              Pray for a school that's on your heart—maybe the school you
+              attended, your child's or grandchild's school, or one in your
+              neighborhood. Better yet... get your entire church or prayer group
+              to pray through this guide with you!
+            </p>
+
+            <p style="line-height: 1.8; margin-bottom: 2rem">
+              <em><strong>Reclaim a Generation (Volume 2)</strong></em> also
+              includes tips for churches on how to bless schools and kids with
+              prayer in unique ways while they are praying through this guide as
+              a congregation.
+            </p>
+
+            <div
+              style="
+                background: rgba(255, 255, 255, 0.1);
+                padding: 1.5rem;
+                border-radius: 8px;
+                margin-top: 2rem;
+              "
+            >
+              <h4 style="color: #ffd700; margin-bottom: 1rem">
+                About the Author
+              </h4>
+              <p style="line-height: 1.8">
+                <strong>CHERYL SACKS</strong> is a best-selling author, national
+                conference speaker, prayer mobilizer, and church prayer
+                consultant. Her "Prayer-Saturated" series—including
+                <em>The Prayer-Saturated Church</em> (NavPress/Tyndale),
+                <em>Prayer-Saturated Kids</em> (NavPress/Tyndale), and
+                <em>The Prayer-Saturated Family</em>
+                (Chosen)—have blessed and mentored tens of thousands of
+                individuals to go deeper into prayer, and have greatly impacted
+                thousands of churches.
+              </p>
+            </div>
+
+            <div style="margin-top: 2rem">
+              <a
+                href="homepage.html"
+                class="btn"
+                style="
+                  background: linear-gradient(135deg, #ec9e23 0%, #d88a1f 100%);
+                "
+              >
+                Learn More About Resources
+              </a>
+            </div>
+          </div>
         </div>
       </div>
 
