Mapping utility relayout and fixes

--- a/media.html
+++ b/media.html
@@ -559,14 +559,59 @@
                 text-align: center;
               "
             >
-              <h3 style="color: #113a51; margin-bottom: 1rem">Prayer Guide</h3>
+              <img
+                src="https://images.squarespace-cdn.com/content/v1/62f1b617cf9c26364ad90dbc/370eba23-c7df-44ad-92dc-e7210b67ebc2/ReclaimaGeneration_Vol2_1__10765.jpg"
+                alt="Reclaim a Generation Volume 2 Book Cover"
+                style="
+                  width: 100%;
+                  max-width: 300px;
+                  height: auto;
+                  border-radius: 4px;
+                  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+                "
+              />
               <div
-                style="background: #f0f0f0; padding: 2rem; border-radius: 4px"
+                style="
+                  margin-top: 1.5rem;
+                  display: flex;
+                  flex-direction: column;
+                  gap: 0.75rem;
+                "
               >
-                <p style="color: #666; font-size: 3rem; margin: 0">📘</p>
-                <p style="color: #113a51; font-weight: bold; margin-top: 1rem">
-                  Volume 2
-                </p>
+                <a
+                  href="https://prayershop.org/reclaim-a-generation-volume-2/"
+                  target="_blank"
+                  class="btn"
+                  style="
+                    background: linear-gradient(
+                      135deg,
+                      #ec9e23 0%,
+                      #d88a1f 100%
+                    );
+                    text-decoration: none;
+                    padding: 10px 20px;
+                    font-size: 14px;
+                  "
+                >
+                  Order from PrayerShop
+                </a>
+                <a
+                  href="https://amzn.to/4pMfQ1x"
+                  target="_blank"
+                  class="btn"
+                  style="
+                    background: linear-gradient(
+                      135deg,
+                      #36b7ff 0%,
+                      #2a9fdd 100%
+                    );
+                    text-decoration: none;
+                    padding: 10px 20px;
+                    font-size: 14px;
+                  "
+                >
+                  Order from Amazon
+                </a>
               </div>
             </div>
           </div>
